--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -6,19 +6,66 @@
           box-sizing: border-box;
   background-color: black;
   color: whitesmoke;
+  text-align: center;
 }
 
 .Title {
   font-weight: normal;
   font-size: 50px;
   width: 100%;
-  text-align: center;
   padding: 30px 20px;
 }
 
 .Title__link {
-  text-align: center;
   padding: 40px;
   font-size: 16px;
+}
+
+.Phone {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.Travel-guide {
+  padding-bottom: 30px;
+}
+
+.Travel-guide__title {
+  font-weight: 300;
+  font-size: 42px;
+  padding: 40px;
+}
+
+.Travel-guide__subtitle {
+  font-size: 21px;
+  color: gray;
+  padding-bottom: 20px;
+}
+
+.Footer {
+  padding: 20px;
+}
+
+.Footer__title {
+  font-weight: normal;
+  font-size: 50px;
+  width: 100%;
+  padding: 60px 20px;
+}
+
+.Footer__link {
+  padding: 0px;
+  font-size: 16px;
+}
+
+.Footer__copyright {
+  color: gray;
+  text-align: right;
+  padding-top: 20px;
 }
 /*# sourceMappingURL=style.css.map */
