--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -5,19 +5,60 @@
     box-sizing: border-box;
     background-color: black;
     color: whitesmoke;
+    text-align: center;
 }
 
 .Title {
     font-weight: normal;
     font-size: 50px;
     width: 100%;
-    text-align: center;
     padding: 30px 20px;
 
-    &__link {
-        text-align: center;
+    &__link { 
         padding: 40px;
         font-size: 16px;
+    }
+}
 
+.Phone {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.Travel-guide {
+    padding-bottom: 30px;
+
+    &__title {
+        font-weight: 300;
+        font-size: 42px;
+        padding: 40px;
+    }
+
+    &__subtitle {
+        font-size: 21px;
+        color: gray;
+        padding-bottom: 20px;
+    }
+}
+
+.Footer {
+    padding: 20px;
+    &__title {
+        font-weight: normal;
+        font-size: 50px;
+        width: 100%;
+        padding: 60px 20px;
+    }
+
+    &__link { 
+        padding: 0px;
+        font-size: 16px;
+    }
+
+    &__copyright {
+        color: gray;
+        text-align: right;
+        padding-top: 20px;
     }
 }
